Updated backend code to send the rejection reason as well by admin while rejecting a leave. Also updated the logic of updating pending leaves.
